# geo_featurization

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
config/: config_lisboa.yaml  config_moscow.yaml
notebooks/: geo_featurize.ipynb
samples/: map_config_buildings  map_config_railway  map_dist_to_railway.html
src/data/: data_utils.py
src/features/: featurize.py
src/geo/: geo_object.py  geo_operation.py  geo_utils.py
src/geo_featurization/data/: data_utils.py
src/geo_featurization/features/: featurize.py
src/geo_featurization/geo/: geo_object.py  geo_operation.py  geo_utils.py
src/geo_featurization/visualization/: kepler_visualize.py
src/visualization/: kepler_visualize.py
tests/: test_features.py
